# mg_ray

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
mg_rayLib/: CMakeLists.txt
mg_rayLib/application/: renderingManager.cpp  renderingManager.h
mg_rayLib/core/: cpuRenderContext.cpp  cpuRenderContext.h  dataManipulationHelper.cpp  dataManipulationHelper.h  file_utils.h  globalSettings.h  renderContext.h  scene.cpp  scene.h
mg_rayLib/core/CPU/: bvh.cpp  bvh.h  cameraRay.h  cpuRenderContext.cpp  cpuRenderContext.h  randomUtils.h
mg_rayLib/foundation/: abstractWindow.h  window.cpp  window.h
mg_rayLib/foundation/MSWindows/: dxWindow.cpp  dxWindow.h  input.h
mg_rayLib/rendering/: debugRenderer.cpp  debugRenderer.h  debugRendererT.cpp  debugRendererT.h
mg_rayLib/rendering/data/geometries/: bunny.mtl
mg_rayLib/rendering/data/scenes/: demo1.json  demo2Implicit.json  demo3.json  demo4SphereTriangle.json  demo5Bunny.json
mg_rayLib/rendering/data/shaders/dx11Shaders/: blitShaderPS.hlsl  blitShaderVS.hlsl  debugForwardMeshPS.hlsl  debugForwardMeshVS.hlsl
mg_rayLib/rendering/dxRenderer/: ImGuiUIdx11.cpp  ImGuiUIdx11.h  blitShader.cpp  blitShader.h  buffers_utils.h  camera.cpp  camera.h  d3dclass.cpp  d3dclass.h  dxDebugRenderer.cpp  dxDebugRenderer.h  implicitSurface.cpp  implicitSurface.h  mesh.cpp  mesh.h  renderTarget.cpp  renderTarget.h  shader.h  shaderUtils.h  surfaceShader.cpp  surfaceShader.h  texture2D.cpp  texture2D.h  uiWidgets.cpp  uiWidgets.h
middleware/: tiny_obj_loader.h
middleware/imgui/: desktop.ini  imgui_internal.h
middleware/json/: jsonForwadDeclare.hpp
middleware/tbb/lib/: tbb_debug.lib
old/: hitable.cpp  main.cpp  world.h
src/: hitable.h  main.cpp  threading.h  world.cpp
